src/test/compile-fail/missing-return.rs
// xfail-stage0
// error-pattern: return

fn f() -> int {
}

fn main() {
  f();
}

